fix #31
