# server/api/controllers/sheets/router.ts
@@ -6,4 +6,6 @@ export default express
   .Router()
   .post('/:sheetId', controller.create)
   .patch('/:sheetId', controller.patch)
-  .delete('/:sheetId', controller.delete);
+  .delete('/:sheetId', controller.delete)
+  .post('/:sheetId/add-month', controller.createMonth)
+  .delete('/:sheetId/delete-month', controller.deleteMonth);
